--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "hardhat": "^2.12.4"
+  },
+  "dependencies": {
+    "create-react-app": "^5.0.1"
   }
 }
